syntax = "proto3";
package grpc;

option go_package = "github.com/MrAnacletus/Lab3-Distribuidos/source/proto";

message HelloRequest {
    string Name = 1;
}

message HelloReply {
    string Message = 1;
}

service BrokerService {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc EnviarComando(HelloRequest) returns (HelloReply);
}

service FulcrumService{
    rpc EnviarComando(HelloRequest) returns (HelloReply);
}